# SatSight

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
docs/wiki/: index.md  satsight-plan.md
nix/: flake.nix
satsight-app/: Cargo.toml  index.html
satsight-app/src/: akari_view.rs  coloring_view.rs  main.rs  stepper.rs
satsight-core/: Cargo.toml
satsight-core/src/: backbone.rs  backend_batsat.rs  cdcl.rs  cnf.rs  encodings.rs  lib.rs  propagate.rs  registry.rs  solver.rs  view.rs
satsight-puzzles/: Cargo.toml
satsight-puzzles/src/: akari.rs  coloring.rs  lib.rs  puzzle.rs  sudoku.rs
template-core/: Cargo.toml
template-core/src/: lib.rs
template-gui/: Cargo.toml
template-gui/src/: main.rs
