[package]
name = "satsight-app"
description = "The SatSight demo frontend: an eframe/egui app that renders the Sudoku grid, edits givens, and visualizes both pure-logic deductions and the full solve. Native today; wasm via trunk in a later milestone."
edition.workspace = true
version.workspace = true

[[bin]]
name = "satsight-app"
path = "src/main.rs"

[dependencies]
satsight-core = { workspace = true }
satsight-puzzles = { workspace = true }
eframe = { workspace = true }

[lints]
workspace = true
