[package]
name = "satsight-app"
description = "The SatSight demo frontend: an eframe/egui app that renders the Sudoku grid, edits givens, and visualizes both pure-logic deductions and the full solve. Native today; wasm via trunk in a later milestone."
edition.workspace = true
version.workspace = true

[[bin]]
name = "satsight-app"
path = "src/main.rs"

[dependencies]
satsight-core = { workspace = true }
satsight-puzzles = { workspace = true }
eframe = { workspace = true }

# Web-only glue for the trunk/wasm build (plan §9). Native builds ignore these.
[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
] }

[lints]
workspace = true
