[package]
name = "template-gui"
description = "An egui/eframe desktop frontend for the template workspace, built on template-core."
edition.workspace = true
version.workspace = true

[[bin]]
name = "template-gui"
path = "src/main.rs"

[dependencies]
template-core = { workspace = true }
# `persistence` gives us eframe's storage layer (a RON file in the OS data dir),
# so the view state survives a quit or a hot-reload restart.
eframe = { workspace = true, features = ["persistence"] }
# For (de)serializing the small persisted-state struct through eframe's storage.
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
